# nym

./: .gitignore  Cargo.toml  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_REPORT.md  LICENSE  README.md  TESTING_COMPLETE.md  api_documentation.md  complete_security_audit  complete_security_audit.rs  deploy_production.sh  monitoring_observability.toml  performance_benchmarks.rs  production_config.toml  run_performance_benchmarks  run_performance_benchmarks.rs  run_security_validation  run_security_validation.rs  rust-toolchain.toml  security_audit_checklist.md  security_validation.rs  setup_testnet_simple  setup_testnet_simple.rs  shell.nix  test_compile.sh  test_implementations  test_implementations.rs  test_implementations.sh  test_validator_operations  test_validator_operations.rs  validate_implementations.rs
design_docs/: decentralized_compute_architecture.md
docs/: roadmap.md  whitepaper.md
nym-cli/: Cargo.toml
nym-compute/: Cargo.toml
nym-compute/src/: error.rs  lib.rs  types.rs
nym-consensus/: Cargo.toml
nym-consensus/src/: difficulty.rs  error.rs  hybrid.rs  lib.rs  mining.rs  pos.rs  pow.rs  types.rs  validator.rs
nym-core/: Cargo.toml
nym-core/src/: account.rs  balance.rs  chain.rs  error.rs  identity.rs  lib.rs  transaction.rs
nym-crypto/: Cargo.toml
nym-crypto/src/: commitment.rs  enhanced_stealth.rs  error.rs  hash.rs  key_derivation.rs  lib.rs  signature.rs  stealth.rs  zkstark.rs
nym-defi/: Cargo.toml
nym-defi/src/: amm.rs  cross_chain.rs  error.rs  lending.rs  lib.rs  liquidity.rs
nym-economics/: Cargo.toml
nym-economics/src/: adaptive_emissions.rs  dynamic_allocation.rs  economic_allocation.rs  error.rs  fee_market.rs  inflation_targeting.rs  integrated_economics.rs  lib.rs
nym-lang/: Cargo.toml
nym-lang/src/: analyzer.rs  ast.rs  codegen.rs  compiler.rs  contract_deployment.rs  crypto_stdlib.rs  error.rs  execution_environment.rs  lexer.rs  lib.rs  optimizer.rs  parser.rs  privacy.rs  privacy_features.rs  privacy_syntax.rs  privacy_utils.rs  stdlib.rs  storage_optimization.rs  types.rs
nym-lang/tests/: basic_test.rs
nym-network/: Cargo.toml  P2P_TEST_REPORT.md  test_performance.rs
nym-network/src/: discovery.rs  error.rs  integration.rs  lib.rs  libp2p_network.rs  message.rs  network_security.rs  node.rs  node_registry.rs  p2p_simple.rs  peer.rs  peer_old.rs  performance_optimizer.rs  privacy_routing.rs  protocol.rs  quid_auth.rs  reputation.rs  routing.rs  security.rs  security_optimization.rs  sync.rs
nym-network/tests/: test_basic_p2p.rs  test_core_p2p.rs  test_minimal_p2p.rs  test_p2p_integration.rs
nym-node/: Cargo.toml  deploy-enhanced-testnet.sh  stress-test-network.sh  stress-test-simulation.sh
nym-node/configs/: bootstrap.toml  light.toml  mainnet.toml  validator.toml
nym-node/docs/: MAINNET_PARAMETERS.md
nym-node/enhanced-testnet/: DEPLOYMENT_REPORT.md  final_stats.json  genesis.json  start-enhanced-testnet.sh  status-enhanced-testnet.sh  stop-enhanced-testnet.sh  test_scenarios.sh  validate-enhanced-testnet.sh
nym-node/enhanced-testnet/contracts/: deployment_manifest.json
nym-node/enhanced-testnet/governance/: initial_proposals.json
nym-node/enhanced-testnet/node0/: config.toml
nym-node/enhanced-testnet/node1/: config.toml
nym-node/enhanced-testnet/node2/: config.toml
nym-node/scripts/: build-distribution.sh  generate-mainnet-genesis.sh  launch-bug-bounty.sh  security-audit.sh  setup-testnet.sh  validate-testnet.sh
nym-node/src/: bug_bounty.rs  cli.rs  config.rs  error.rs  genesis.rs  hardware_wallet.rs  lib.rs  light_client.rs  main.rs  mobile_interface.rs  node.rs  penetration_testing.rs  performance_optimizer.rs  rpc.rs  security_audit.rs  state.rs  vulnerability_scanner.rs
nym-node/stress-test-results/: performance_analysis.json  stress_test_report.md
nym-performance/: Cargo.toml
nym-performance/src/: allocators.rs  benchmarking.rs  caching.rs  compression.rs  config.rs  error.rs  lib.rs  memory_optimizer.rs  metrics.rs  monitoring.rs  network_optimizer.rs  parallelization.rs  profiling.rs  zkstark_optimizer.rs
nym-privacy/: Cargo.toml
nym-privacy-validation/: Cargo.toml
nym-privacy-validation/src/: anonymity_analysis.rs  cryptographic_assumptions.rs  differential_privacy_analysis.rs  error.rs  lib.rs  metadata_privacy.rs  privacy_leak_detection.rs  transaction_graph.rs  zkproof_analysis.rs
nym-privacy/src/: confidential_transactions.rs  error.rs  lib.rs  public_transactions.rs  transaction_anonymity.rs
nym-security-audit/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile  README_BINARIES.md  demo_security_audit.sh  test_binaries.sh
nym-security-audit/benches/: timing_analysis.rs
nym-security-audit/src/: crypto_audit.rs  dos_resistance.rs  fuzzing.rs  lib.rs  memory_safety.rs  network_security.rs  quid_integration_security.rs  storage_security.rs  timing_analysis.rs
nym-storage/: Cargo.toml  TEST_SUMMARY.md
nym-storage/src/: account_store.rs  backup.rs  chain_store.rs  cut_through.rs  encrypted_store.rs  error.rs  index.rs  lib.rs  quid_recovery.rs  tiered_storage.rs
nym-storage/tests/: integration_test.rs
nym-transparency/: Cargo.toml
nym-transparency/src/: audit.rs  compliance.rs  lib.rs  privacy_preserving.rs  verification.rs
nym-vm/: Cargo.toml
nym-vm/src/: core_vm.rs  crypto_instructions.rs  error.rs  integrated_vm.rs  lib.rs  optimization.rs  ppvm.rs  secure_vm.rs  security.rs
src/: lib.rs
testnet/: genesis.json  network_topology.toml  start_testnet.sh  stop_testnet.sh
testnet/node0/: config.toml
testnet/node1/: config.toml
testnet/node2/: config.toml
