[package]
name = "nym"
version = "0.1.0"
edition = "2021"
authors = ["Nym Development Team"]
description = "Quantum-Resistant Anonymous Cryptocurrency"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nymverse/nym"

[workspace]
members = [
    "nym-core",
    "nym-crypto",
    "nym-consensus",
    "nym-network",
    "nym-storage",
    "nym-cli",
    "nym-node",
    "nym-security-audit",
    "nym-privacy-validation",
    "nym-performance",
    "nym-compute",
    "nym-economics",
    "nym-transparency",
    "nym-vm",
    "nym-privacy",
]

[workspace.dependencies]
# Cryptography
sha3 = "0.10"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
secrecy = { version = "0.8", features = ["serde"] }
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async and networking
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.4"

# Storage
rocksdb = "0.21"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

[dependencies]
# QuID dependency - Nym uses QuID for authentication
quid-core = { path = "../quid/quid-core" }

# Core Nym components
nym-core = { path = "nym-core" }
nym-crypto = { path = "nym-crypto" }
nym-consensus = { path = "nym-consensus" }
nym-network = { path = "nym-network" }
nym-storage = { path = "nym-storage" }
nym-cli = { path = "nym-cli" }
nym-node = { path = "nym-node" }
nym-security-audit = { path = "nym-security-audit" }
nym-privacy-validation = { path = "nym-privacy-validation" }
nym-performance = { path = "nym-performance" }
nym-compute = { path = "nym-compute" }
nym-economics = { path = "nym-economics" }
nym-transparency = { path = "nym-transparency" }
nym-vm = { path = "nym-vm" }
nym-privacy = { path = "nym-privacy" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }