[package]
name = "nym-crypto"
version = "0.1.0"
edition = "2021"
description = "Quantum-resistant cryptographic primitives for Nym"

[dependencies]
# Quantum-resistant cryptography (placeholder - will use oqs-rust in production)
sha3 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
secrecy = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
hex = "0.4"

# Testing
proptest = { workspace = true, optional = true }

[features]
default = []
testing = ["proptest"]

[dev-dependencies]
proptest = { workspace = true }