[package]
name = "nym-economics"
version = "0.1.0"
edition = "2021"
authors = ["Nym Development Team"]
description = "Economic protocol implementation for Nym blockchain with adaptive emissions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nymverse/nym"

[dependencies]
# Core Nym dependencies
nym-core = { path = "../nym-core" }
nym-crypto = { path = "../nym-crypto" }

# Async runtime
tokio = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Mathematical operations
bigdecimal = "0.4"
num-bigint = "0.4"
num-traits = "0.2"

# Time handling
chrono = { workspace = true }

# Data structures
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
test-case = "3.3"

[features]
default = ["adaptive-emissions"]
adaptive-emissions = []
advanced-analytics = []