[package]
name = "nym-lang"
version = "0.1.0"
edition = "2021"
description = "NymScript - Privacy-preserving smart contract language"

[dependencies]
nym-core = { path = "../nym-core" }
nym-crypto = { path = "../nym-crypto" }
# nym-vm = { path = "../nym-vm" }  # Temporarily disabled due to compilation errors

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Parser and compiler
nom = "7.1"
logos = "0.13"
pest = "2.5"
pest_derive = "2.5"

# Collections and utilities
indexmap = "2.0"
petgraph = "0.6"
uuid = { version = "1.0", features = ["v4"] }

# Cryptography
sha3 = "0.10"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"