[package]
name = "nym-network"
version = "0.1.0"
edition = "2021"
description = "P2P networking layer for Nym with privacy-preserving communication"

[dependencies]
nym-crypto = { path = "../nym-crypto" }
nym-core = { path = "../nym-core" }

# Networking
tokio = { workspace = true }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Utilities
hex = "0.4"
rand = "0.8"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Networking protocols
# libp2p = { version = "0.50", default-features = false, features = [
#     "tcp",
#     "dns", 
#     "noise",
#     "yamux",
#     "gossipsub",
#     "kad",
#     "identify",
#     "ping",
#     "macros",
#     "tokio"
# ] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
tracing-subscriber = "0.3"
